# xtools

./: CMakeLists.txt  CMakeLists.txt.user.58e7c70  CMakeLists.txt.user.69cad53  xTools.qrc
Debug/: CMakeCache.txt  CMakeCache.txt.prev  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
Debug/Source/Common/: Makefile  cmake_install.cmake
Debug/Source/Task/: Makefile  cmake_install.cmake
Debug/Source/Tools/: Makefile
Debug/xToolsCore_autogen/3Z7C4G4HWK/: moc_link11parts.cpp  moc_maincontrol.cpp  moc_new_par_ui.cpp
Debug/xToolsCore_autogen/ASYZDZHFE2/: moc_xToolsAsciiAssistant.cpp
Debug/xToolsCore_autogen/CM5ODBXCET/: moc_xToolsCRCAssistant.cpp
Debug/xToolsCore_autogen/CMBD5TGTP4/: moc_SystemTrayIcon.cpp
Debug/xToolsCore_autogen/LI3IIMGOGB/: moc_xToolsCryptographicHashCalculator.cpp
Debug/xToolsCore_autogen/R2SXGQEZYW/: moc_xToolsQRCodeAssistant.cpp
Debug/xToolsCore_autogen/VHSO6YIQGK/: moc_xToolsToolBox.cpp
Debug/xToolsCore_autogen/VTNVHCBLNJ/: moc_xToolsModbusStudioUi.cpp
Debug/xToolsCore_autogen/include/: ui_ncright_table.h  ui_new_pac_ui.h  ui_new_par_ui.h  ui_xToolsBroadcastAssistant.h  (+2 more)
Source/: Application.cpp  MainWindow.cpp  MainWindow.h  main.cpp
Source/Assistants/: xToolsAssistantFactory.cpp
Source/Common/: CMakeLists.txt
Source/Tools/: CMakeLists.txt
Source/task/: CMakeLists.txt
Source/task/source/: canttchartscene.cpp  canttchartscene.h  canttchartview.cpp  cantttimebaritem.cpp  cantttimebaritem.h  taskFileMergeAssistant.cpp  taskFileMergeAssistant.h  taskFileMergeAssistant.ui
(+172 files in other folders)
