file(GLOB_RECURSE X_TASK_SOURCE_H "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file(GLOB_RECURSE X_TASK_SOURCE_UI "${CMAKE_CURRENT_SOURCE_DIR}/*.ui")
file(GLOB_RECURSE X_TASK_SOURCE_CPP "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

set(ALL_SOURCE "")
list(APPEND ALL_SOURCE ${X_TASK_SOURCE_H})
list(APPEND ALL_SOURCE ${X_TASK_SOURCE_UI})
list(APPEND ALL_SOURCE ${X_TASK_SOURCE_CPP})
list(APPEND ALL_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/img.qrc)


add_library(xToolsTask STATIC ${ALL_SOURCE})
target_link_libraries(xToolsTask PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)


